# fgc

./: .gitignore  README.md  _used_versions.txt  fgc_reader_testresult  fgc_tools_creator.py  fgcbot.py  fgccreator.py  fgcdrawer.py  hamming.py  main.py  parity.py  pyproject.toml  requirements.txt  style.css  test_creator.py  test_reader.py  todo
creator/: fgcdrawer.py  main.py
creator/css/: style.css
fgc_tools/: __init__.py  centerfinder.py  commonfunctions.py  featurehandler.py  fgccreator.py  fgccreator_2.py  fgcdrawer.py  fgcreader.py  fgcreader2.py  fgcreader_old.py  readresult.py  requirements.txt
fgc_tools/libs/: binarytools.py  commonfunctions.py  hamming.py  parity.py
libs/: binarytools.py  hamming.py  parity.py
reader/: TEST.py  _used_versions.txt  centerfinder.py  commonconstants.py  commonfunctions.py  cvfunctions.py  main.py  requirements.txt
unused/: fgccreator_2.py  fgcreader_old.py  hamming_2.py
